# ghshare

./: .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs
src/: cli.rs  github.rs  header.proto  header.rs  main.rs
src/encryption/: asymm.rs  mod.rs  symm.rs
tests/keys/: id_rsa  id_rsa.passphrase  id_rsa.passphrase.pub  id_rsa.pub
