[package]
name = "ghshare"
version = "0.1.1"
authors = ["K.J. Valencik <kjvalencik@gmail.com>"]
build = "build.rs"

[dependencies]
byteorder = "1"
bytes = "0.4"
clap = "2"
dirs = "1"
env_logger = "0.5"
failure = "0.1"
hyper = "0.11"
log = "0.4"
openssh-keys = "0.2"
openssl = "0.10"
openssl-probe = "0.1"
miscreant = "0.3"
prost = "0.3"
prost-derive = "0.3"
reqwest = "0.8"
rpassword = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"

[build-dependencies]
prost-build = "0.3"

[profile.release]
lto = true
