[package]
name = "ghshare"
version = "0.4.2"
authors = ["K.J. Valencik <kjvalencik@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
byteorder = "1"
bytes = "0.4"
clap = "2"
dirs = "1"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
openssh-keys = "0.4"
openssl = "0.10"
openssl-probe = "0.1"
miscreant = "0.4"
prost = "0.4"
prost-derive = "0.4"
reqwest = "0.9"
rpassword = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.2"
thrussh-keys = "0.11"

[build-dependencies]
prost-build = "0.4"

[profile.release]
lto = true
